--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -13,13 +13,13 @@
     
   <main class="ctn-login-page-box">
      <span><%= typeof error !== "undefined" ? error:'' %> </span>
-        <form action="/login" method="POST"  id="form_login">
+        <form class="row gy-4 gx-6 align-items-center" action="/login" method="POST"  id="form_login">
         <label class="login-input-label">
-          <input class="login-input" type="email" name="email" placeholder="Digite seu email"  />
+          <input class="form-control" type="email" name="email" placeholder="Digite seu email"  />
         </label>
 
         <label class="login-input-label">
-          <input class="login-input" type="password" name="password" placeholder="Senha"/>
+          <input class="form-control" type="password" name="password" placeholder="Senha"/>
         </label>
         <label>
           <button class="login-submit-btn" type="submit">Entrar</button>
@@ -28,8 +28,6 @@
           <p class= "login-info">
             Esqueceu a senha? <a><strong>clique aqui</strong></a>
           </p>
-        </div>
-        <div class="register-card">
           <p class= "login-info">
             Não tem uma conta? <a href="/cadastro"><strong>Cadastre-se</strong></a>
           </p>
