--- a/src/views/partials/category.ejs
+++ b/src/views/partials/category.ejs
@@ -69,7 +69,7 @@
             </div>
             <div class="ctn-category-price">
                 <div class="pname">
-                    <a href="#">TV
+                    <a href="#">Televisores
                     </a>
                 </div>
             </div>
@@ -84,7 +84,7 @@
             </div>
             <div class="ctn-category-price">
                 <div class="pname">
-                    <a href="#">Celulares & Telefones
+                    <a href="#">Smartphones
                     </a>
                 </div>
             </div>
