--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,27 +3,13 @@
     <div class="top-menu">
       <div class="logo">
         <a href="/">
-        <img src="/images/infodev.png" alt="infodev" />
+          <img src="/images/infodev.png" alt="infodev" />
         </a>
       </div>
       <div class="top-icons">
-        <a href="/login"
-          ><span
-            class="iconify"
-            data-inline="false"
-            data-icon="ant-design:user-outlined"
-          ></span
-        ></a>
-        <a href="/login"
-          ><span
-            class="iconify"
-            data-inline="false"
-            data-icon="bi:suit-heart"
-          ></span
-        ></a>
-        <a href="3"
-          ><span class="iconify" data-inline="false" data-icon="bi:cart"></span
-        ></a>
+        <a href="/login"><span class="iconify" data-inline="false" data-icon="ant-design:user-outlined"></span></a>
+        <a href="#"><span class="iconify" data-inline="false" data-icon="bi:suit-heart"></span></a>
+        <a href="#"><span class="iconify" data-inline="false" data-icon="bi:cart"></span></a>
       </div>
     </div>
 
@@ -32,69 +18,47 @@
         <input type="checkbox" id="nav__checkbox" class="nav__checkbox" />
         <label for="nav__checkbox" class="nav__toggle">
           <div class="menu">
-            <span
-              class="iconify"
-              data-inline="false"
-              data-icon="gg:menu"
-              style="color: #e17055; font-size: 24px"
-            ></span>
+            <span class="iconify" data-inline="false" data-icon="gg:menu"
+              style="color: #e17055; font-size: 24px"></span>
           </div>
           <div class="close">
-            <span
-              class="iconify"
-              data-inline="false"
-              data-icon="eva:close-outline"
-              style="color: #e17055; font-size: 24px"
-              data-flip="horizontal"
-            ></span>
+            <span class="iconify" data-inline="false" data-icon="eva:close-outline"
+              style="color: #e17055; font-size: 24px" data-flip="horizontal"></span>
           </div>
         </label>
         <ul id="navbar-list">
-          <li><a href="/produto">News</a></li>
+          <li><a href="#">News</a></li>
           <li><a href="/produtos/categorias">Categorias</a></li>
-          <li><a href="/produtos">Computadores</a></li>
-          <li><a href="/produtos">Gamer</a></li>
-          <li><a href="/produtos">Hardware</a></li>
-          <li><a href="/produtos">Sobre Nós</a></li>
+          <li><a href="#">Sobre Nós</a></li>
           <li><a href="/contatos">Contato</a></li>
         </ul>
       </nav>
-      <nav class="desktop-navbar"></nav>
-      <ul class="topnav" id="myTopnav">
+      <nav class="desktop-navbar">
+        <ul class="topnav" id="myTopnav">
           <li><a href="/produtos">News</a></li>
-          <li><a href="/produtos/categorias">Categorias</a></li>
+          <li><a href="/produtos/categorias">Categorias</a>
             <ul>
               <li><a href="/produtos">Computadores</a></li>
               <li><a href="/produtos">Games</a></li>
               <li><a href="/produtos">Hardware</a></li>
-              <li><a href="/produtos">Periféricos</a></li> 
-              <li><a href="/produtos">TV</a></li>
-              <li><a href="/produtos">Celulares & Telefones</a></li>
+              <li><a href="/produtos">Periféricos</a></li>
+              <li><a href="/produtos">Televisores</a></li>
+              <li><a href="/produtos">Smartphones</a></li>
             </ul>
+          </li>
           <li><a href="/produtos">Sobre Nós</a></li>
           <li><a href="/contato">Contato</a></li>
 
-      </ul>
-      <!-- <div class="topnav" id="myTopnav">
-        <a href="/">Home</a>
-        <a href="/produto">News</a>
-        <a href="/produto">Informatica</a>
-        <a href="/produto">Smartphones</a>
-        <a href="/produto">Sobre Nós</a>
-        <a href="/produto">Contato</a>
-      </div> -->
+        </ul>
+      </nav>
     </div>
   </div>
 
-  
+
 
   <div class="searchbar">
     <form class="searchbar-form" action="action_page.php">
-      <input
-        type="text"
-        placeholder="O que você está procurando?"
-        name="search"
-      />
+      <input type="text" placeholder="O que você está procurando?" name="search" />
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
   </div>
