--- a/src/public/css/contact.css
+++ b/src/public/css/contact.css
@@ -1,5 +1,3 @@
-
-
 body {
     margin: 0;
     padding: 0;
@@ -18,8 +16,8 @@ body {
   
   .section-header {
     text-align: center;
-    margin: 50px;
-    padding: 40px 0;
+    margin: 0 auto;
+    padding: 40px 0 0 0;
     font-size: clamp(2rem, 2.5vw, 2.8rem);
     color: var(--blue-color);
   
@@ -53,7 +51,7 @@ body {
   
   .send-button {
     margin-top: 15px;
-    height: 20px;
+    height: 25px;
     width: 400px;
     overflow: hidden;
     transition: all .2s ease-in-out;
@@ -151,7 +149,7 @@ body {
     line-height: 60px;
     border-radius: 50%;
     color: rgb(0, 0, 0);
-    /* background-color: rgb(27,27,27); */
+    background-color: var(--primary-color);
     cursor: pointer; 
     transition: all .2s ease-in-out;
   }
@@ -181,7 +179,7 @@ body {
   }
   
   .social-media-list li:hover a {
-    color: #000;
+    color: var(--primary-color);
   }
   
   .copyright {
