--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -44,9 +44,9 @@
 /*  MEDIA QUERIES */
 @media (min-width: 800px) {
 
-  form.searchbar-form button {
-    padding: 1.6rem;
-  }
+  /* form.searchbar-form button {
+    padding: 1.7rem;
+  } */
 
   .ctn-offer{
     position: relative; 
