--- a/src/public/css/category.css
+++ b/src/public/css/category.css
@@ -3,7 +3,7 @@
   /* OFERTA */
   .ctn-category {
     font-size: clamp(2rem, 2.5vw, 2.8rem);
-    margin: 10rem;
+    margin-top: 2rem;
   }
   
   .ctn-category>h2 {
@@ -33,6 +33,10 @@
     text-decoration-line: none;
 
   }
+
+  .footerBoxMain hr {
+    display: none;
+  }
   
   /*  MEDIA QUERIES */
   @media (min-width: 800px) {
@@ -57,6 +61,10 @@
       border-radius: 4px;
       padding: .5rem;
   
+    }
+
+    .footerBoxMain hr {
+      display: block;
     }
    
   
