--- a/src/views/categorias.ejs
+++ b/src/views/categorias.ejs
@@ -3,7 +3,7 @@
 
 <%- include("./partials/head")%>
 <link rel="stylesheet" href="/css/global.css" />
-<link rel="stylesheet" href="/css/department.css" />
+<link rel="stylesheet" href="/css/category.css" />
 
 
 <body>
