[fix] product image path

--- a/src/views/produto.ejs
+++ b/src/views/produto.ejs
@@ -12,9 +12,9 @@
  
         <!-- Left Column / Headphones Image -->
         <div class="left-column">
-          <img data-image="black" src="images/black.png" alt="">
-          <img data-image="blue" src="images/blue.png" alt="">
-          <img data-image="red" class="active" src="images/red.png" alt="">
+          <img data-image="black" src="/images/black.png" alt="">
+          <img data-image="blue" src="/images/blue.png" alt="">
+          <img data-image="red" class="active" src="/images/red.png" alt="">
         </div>
        
        
