--- a/src/public/css/global.css
+++ b/src/public/css/global.css
@@ -27,6 +27,31 @@
     min-height: 100vh;
   }
   
+  h1 {
+    font-size: 6rem;
+    text-transform: uppercase;
+  }
+
+  h2 {
+    font-size: 5.5rem;
+  }
+
+  h3 {
+    font-size: 5rem;
+  }
+
+  h4 {
+    font-size: 4.5rem;
+  }
+
+  h5 {
+    font-size: 4rem;
+  }
+
+  h6 {
+    font-size: 3.5rem;
+  }
+
   .bd-flex {
     display: flex;
     justify-content: center;
