--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -45,11 +45,12 @@
   border-color: #ff4500;
 }
 .forget-password {
-  margin-top: 20px;
+  margin-top: 4rem;
 }
-.forget-password strong {
+.forget-password a {
   color: #ff4500;
   cursor: pointer;
+  margin-bottom: 2rem;
 }
 
 .login-info {
