--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -26,10 +26,10 @@
         </label>
         <div class="forget-password">
           <p class= "login-info">
-            Esqueceu a senha? <a><strong>clique aqui</strong></a>
+            Esqueceu a senha? <a><strong>Clique aqui</strong></a>
           </p>
           <p class= "login-info">
-            Não tem uma conta? <a href="/cadastro"><strong>Cadastre-se</strong></a>
+            Não tem uma conta? <a href="/auth/cadastro"><strong>Cadastre-se</strong></a>
           </p>
         </div>
       </form>
