--- a/src/views/partials/offers.ejs
+++ b/src/views/partials/offers.ejs
@@ -9,12 +9,12 @@
         </div>
 
         <div class="image">
-            <a href="/produtos">
+            <a href="/produtos/produto">
                 <img src="/images/processador-amd.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
         </div>
         <div class="ctn-product">
             </a>
-            <div class="pname"><a href="/produtos">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
+            <div class="pname"><a href="/produtos/produto">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
                 </a></div>
         </div>
     </div>
@@ -25,12 +25,12 @@
             <span>20%</span>
         </div>
         <div class="image">
-            <a href="/produtos">
+            <a href="/produtos/produto">
                 <img src="/images/console-microsoft-xbox-series-s-500gb-branco-rrs-00006_1601067301_m.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
         </div>
         <div class="ctn-product">
             </a>
-            <div class="pname"><a href="/produtos">Console Microsoft Xbox Series S, 512GB, Branco - RRS-00006
+            <div class="pname"><a href="/produtos/produto">Console Microsoft Xbox Series S, 512GB, Branco - RRS-00006
             </a>
         </div>
         </div>
@@ -44,12 +44,12 @@
         </div>
 
         <div class="image">
-            <a href="/produtos">
+            <a href="/produtos/produto">
                 <img src="/images/headset-gamer-hyperx-cloud-stinger-drivers-50mm-microfone-com-cancelamento-de-ruido-rosa-hhss1x-ax-pk-g_1625150598_m.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
         </div>
         <div class="ctn-product">
             </a>
-            <div class="pname"><a href="/produtos">Headset Gamer HyperX Cloud Stinger Pink, Drivers 50mm, Microfone com Cancelamento de Ruído
+            <div class="pname"><a href="/produtos/produto">Headset Gamer HyperX Cloud Stinger Pink, Drivers 50mm, Microfone com Cancelamento de Ruído
                 </a></div>
         </div>
     </div>
@@ -62,12 +62,12 @@
         </div>
 
         <div class="image">
-            <a href="/produtos">
+            <a href="/produtos/produto">
                 <img src="/images/samsung-smart-tv-55-uhd-4k-55au7700-processador-crystal-4k-tela-sem-limites-visual-livre-de-cabos-alexa-built-in-un55au7700gxzd_1617626699_m.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
         </div>
         <div class="ctn-product">
             </a>
-            <div class="pname"><a href="/produtos">Samsung Smart TV 55´´ UHD 4K 55AU7700, Processador Crystal 4K, Tela sem limites
+            <div class="pname"><a href="/produtos/produto">Samsung Smart TV 55´´ UHD 4K 55AU7700, Processador Crystal 4K, Tela sem limites
                 </a></div>
         </div>
     </div>
@@ -80,12 +80,12 @@
         </div>
 
         <div class="image">
-            <a href="/produtos">
+            <a href="/produtos/produto">
                 <img src="/images/monitor-gamer-led-ozone-24-5-pro-full-hd-hdmi-displayport-144hz-1ms-altura-ajustavel-ozdsp25pro_1610377706_m.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
         </div>
         <div class="ctn-product">
             </a>
-            <div class="pname"><a href="/produtos">Monitor Gamer Ozone 24,5 LED, 144 Hz, Full HD, 1ms, FreeSync, HDR, HDMI/DisplayPort
+            <div class="pname"><a href="/produtos/produto">Monitor Gamer Ozone 24,5 LED, 144 Hz, Full HD, 1ms, FreeSync, HDR, HDMI/DisplayPort
                 </a></div>
         </div>
     </div>
@@ -98,12 +98,12 @@
         </div>
 
         <div class="image">
-            <a href="/produtos">
+            <a href="/produtos/produto">
                 <img src="/images/teclado-mecanico-gamer-t-dagger-bora-rgb-switch-outemu-blue-abnt2-t-tgk315-blue_1581356584_m.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
         </div>
         <div class="ctn-product">
             </a>
-            <div class="pname"><a href="/produtos">Teclado Mecânico Gamer T-Dagger Bora, RGB, Switch Outemu Blue
+            <div class="pname"><a href="/produtos/produto">Teclado Mecânico Gamer T-Dagger Bora, RGB, Switch Outemu Blue
                 </a></div>
         </div>
     </div>
