[Fix]Uptade caminho login/register

--- a/src/views/auth/cadastro.ejs
+++ b/src/views/auth/cadastro.ejs
@@ -15,7 +15,7 @@
     
   <main class="ctn-login-page-box">
     <form 
-    action="/cadastro"
+    action="/auth/cadastro"
     method="POST"
     class="form-auth card">
       
