--- a/src/views/auth/cadastro.ejs
+++ b/src/views/auth/cadastro.ejs
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <%- include("../partials/head")%>  
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 <link rel="stylesheet" href="/css/global.css" />
 <link rel="stylesheet" href="/css/login.css" />
 
@@ -13,31 +13,68 @@
   <!--header-end-->
  
     
-  <main class="ctn-login-page-box">
-    <form 
-    action="/auth/cadastro"
-    method="POST"
-    class="form-auth card">
-      
-      <input type="email" name="email" placeholder="Digite seu email" />
-      <input type="text" name="name" placeholder="Digite seu nome completo" />
-      <!-- <input
-        type="text"
-        name="username"
-        placeholder="Digite seu nome de usuario"
-      /> -->
-      <input type="password" name="password" placeholder="Senha" />
-      <button type="submit">Cadastra-se</button>
-      <p>
-        Ao se cadastrar, você concorda com nossos
-        <b>Termos, Política de Dados e Política de Cookies.</b>
-      </p>
-      <div class="register card">
-        <p>
-          Tem uma conta? <a href="/login"><b>Conecte-se</b></a>
-        </p>
+  <main class="rgister-main">
+    
+    <section class="vh-100 bg-image" style="background-image: url('https://mdbootstrap.com/img/Photos/new-templates/search-box/img4.jpg');">
+      <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+        <div class="container h-100">
+          <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+              <div class="card" style="border-radius: 15px;">
+                <div class="card-body p-5">
+                  <h2 class="text-uppercase text-center mb-5">Create an account</h2>
+    
+                  <form>
+    
+                    <div class="form-outline mb-4">
+                      <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
+                      <label class="form-label" for="form3Example1cg">Your Name</label>
+                    </div>
+    
+                    <div class="form-outline mb-4">
+                      <input type="email" id="form3Example3cg" class="form-control form-control-lg" />
+                      <label class="form-label" for="form3Example3cg">Your Email</label>
+                    </div>
+    
+                    <div class="form-outline mb-4">
+                      <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
+                      <label class="form-label" for="form3Example4cg">Password</label>
+                    </div>
+    
+                    <div class="form-outline mb-4">
+                      <input type="password" id="form3Example4cdg" class="form-control form-control-lg" />
+                      <label class="form-label" for="form3Example4cdg">Repeat your password</label>
+                    </div>
+    
+                    <div class="form-check d-flex justify-content-center mb-5">
+                      <input
+                        class="form-check-input me-2"
+                        type="checkbox"
+                        value=""
+                        id="form2Example3cg"
+                      />
+                      <label class="form-check-label" for="form2Example3g">
+                        I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
+                      </label>
+                    </div>
+    
+                    <div class="d-flex justify-content-center">
+                      <button type="button" class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
+                    </div>
+    
+                    <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!" class="fw-bold text-body"><u>Login here</u></a></p>
+    
+                  </form>
+    
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </form>
+    </section> 
+    
+  
   </main>
 
   <div class="footerBox">
