--- a/src/views/auth/cadastro.ejs
+++ b/src/views/auth/cadastro.ejs
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <%- include("../partials/head")%>  
+<%- include("../partials/head")%>
 
-
-<link rel="stylesheet" href="/css/global.css" />
 <link rel="stylesheet" href="/css/login.css" />
 
 
@@ -11,70 +9,33 @@
   <!--header-->
   <%- include('../partials/header')%>
   <!--header-end-->
- 
-    
-  <main class="rgister-main">
-    
-    <section class="vh-100 bg-image" style="background-image: url('https://mdbootstrap.com/img/Photos/new-templates/search-box/img4.jpg');">
-      <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-        <div class="container h-100">
-          <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-              <div class="card" style="border-radius: 15px;">
-                <div class="card-body p-5">
-                  <h2 class="text-uppercase text-center mb-5">Create an account</h2>
-    
-                  <form>
-    
-                    <div class="form-outline mb-4">
-                      <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
-                      <label class="form-label" for="form3Example1cg">Your Name</label>
-                    </div>
-    
-                    <div class="form-outline mb-4">
-                      <input type="email" id="form3Example3cg" class="form-control form-control-lg" />
-                      <label class="form-label" for="form3Example3cg">Your Email</label>
-                    </div>
-    
-                    <div class="form-outline mb-4">
-                      <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
-                      <label class="form-label" for="form3Example4cg">Password</label>
-                    </div>
-    
-                    <div class="form-outline mb-4">
-                      <input type="password" id="form3Example4cdg" class="form-control form-control-lg" />
-                      <label class="form-label" for="form3Example4cdg">Repeat your password</label>
-                    </div>
-    
-                    <div class="form-check d-flex justify-content-center mb-5">
-                      <input
-                        class="form-check-input me-2"
-                        type="checkbox"
-                        value=""
-                        id="form2Example3cg"
-                      />
-                      <label class="form-check-label" for="form2Example3g">
-                        I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
-                      </label>
-                    </div>
-    
-                    <div class="d-flex justify-content-center">
-                      <button type="button" class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
-                    </div>
-    
-                    <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!" class="fw-bold text-body"><u>Login here</u></a></p>
-    
-                  </form>
-    
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> 
-    
+
+
+  <main class="ctn-login-page-box">
   
+    <form action="/auth/cadastro" method="POST" class="mb-3">
+      <label for="formGroupExampleInput2" class="form-label">Nome Completo</label>
+      <input type="text" name="name" class="form-control" id="formGroupExampleInput2" placeholder="Digite o seu nome"
+        required />
+      <label for="formGroupExampleInput" class="form-label">Endereço E-mail</label>
+      <input type="email" name="email" class="form-control" id="formGroupExampleInput" placeholder="informe o seu email"
+        required />
+
+      <label for="formGroupExampleInput" class="form-label">Crie uma Senha</label>
+      <input type="password" name="password" class="form-control" id="formGroupExampleInput"
+        placeholder="digite a senha" required />
+      <button type="submit" class="login-submit-btn">Cadastra-se</button>
+      <p>
+        Ao se cadastrar, você concorda com nossos
+        <b>Termos, Política de Dados e Política de Cookies.</b>
+      </p>
+      
+        <p>
+         já tem conta? 
+          <button onclick="window.location.href='/login'" class="login-submit-btn">Login</button>
+        </p>
+      </div>
+    </form>
   </main>
 
   <div class="footerBox">
