--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -3,7 +3,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  
+  <link rel="stylesheet" href="/css/global.css" />
+  <link rel="stylesheet" href="/css/bootstrap.css"
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
@@ -14,7 +15,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
   />
-  <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
+ 
 
 
   
