--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -1,3 +1,100 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
+
+body {
+    background-color: #fff;
+    font-weight: 300
+}
+
+.height {
+    height: 100vh
+}
+
+.card {
+    border: none;
+    padding: 20px;
+    background-color: #ff4500;
+    color: #fff
+}
+
+.circle {
+    height: 20px;
+    width: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #0d6efd;
+    color: #fff;
+    font-size: 10px;
+    border-radius: 50%
+}
+
+
+.fa-envelope:before, 
+.fa-user:before,
+.fa-lock:before 
+ {
+  color: #0d6efd;
+}
+
+.form-input {
+    position: relative;
+    margin-bottom: 10px;
+    margin-top: 10px
+}
+
+.form-input i {
+    position: absolute;
+    font-size: 18px;
+    top: 15px;
+    left: 10px
+}
+
+.form-control {
+    height: 50px;
+    background-color: var(--white-color);
+    text-indent: 24px;
+    font-size: 15px
+}
+
+.form-control:focus {
+    background-color: var(--white-color);
+    box-shadow: none;
+    color: #212529;
+    border-color: #4f63e7
+}
+
+.form-check-label {
+    margin-top: 2px;
+    font-size: 14px
+}
+
+.signup {
+    height: 50px;
+    font-size: 14px
+}
+
+.social {
+    height: 50px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #eee;
+    border-radius: 50%;
+    margin-right: 10px;
+    cursor: pointer
+}
+
+.social:hover {
+    background-color: #ff4500;
+    border-color: #ff4500
+}
+
+.text-muted {
+  color: var(--bs-white) !important;
+}
+
+/*Old Code*/
 
 .ctn-login-page-box {
   display: flex;
