--- a/src/views/auth/cadastro.ejs
+++ b/src/views/auth/cadastro.ejs
@@ -11,36 +11,34 @@
   <!--header-end-->
 
 
+
   <main class="ctn-login-page-box">
   
-    <form action="/auth/cadastro" method="POST" class="mb-3">
-      <label for="formGroupExampleInput2" class="form-label">Nome Completo</label>
-      <input type="text" name="name" class="form-control" id="formGroupExampleInput2" placeholder="Digite o seu nome"
-        required />
-      <label for="formGroupExampleInput" class="form-label">Endereço E-mail</label>
-      <input type="email" name="email" class="form-control" id="formGroupExampleInput" placeholder="informe o seu email"
-        required />
 
-      <label for="formGroupExampleInput" class="form-label">Crie uma Senha</label>
-      <input type="password" name="password" class="form-control" id="formGroupExampleInput"
-        placeholder="digite a senha" required />
-      <button type="submit" class="login-submit-btn">Cadastra-se</button>
-      <p>
-        Ao se cadastrar, você concorda com nossos
-        <b>Termos, Política de Dados e Política de Cookies.</b>
-      </p>
-      
-        <p>
-         já tem conta? 
-          <button onclick="window.location.href='/login'" class="login-submit-btn">Login</button>
-        </p>
+
+    <div class="container mt-5 mb-5">
+      <div class="row d-flex align-items-center justify-content-center">
+          <div class="col-md-6">
+              <div class="card px-5 py-5"> <span class="circle"><i class="fa fa-check"></i></span>
+                  <h5 class="mt-3">Entr no mundo dos Devs <br> As melhores marcas com os melhores preços</h5> <small class="mt-2 text-muted">Aproveito o melhor da web: HTML, CSS and javascript. Todos os nossos produtos contem com garantia de qualidade e satisfação</small>
+
+                  <form action="/auth/cadastro" method="POST" class="mb-3">
+                    <div class="form-input"> <i class="fa fa-user"></i> <input type="text" name="name" class="form-control" placeholder="Digite o seu nome" required> </div>
+                    <div class="form-input"> <i class="fa fa-envelope"></i> <input type="text" name="email" class="form-control" placeholder="Informo o seu E-mail" required> </div>
+                    <div class="form-input"> <i class="fa fa-lock"></i> <input type="text" name="password" class="form-control" placeholder="Crie uma Senha" required> </div>
+                    <div class="form-check"> <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked> <label class="form-check-label" for="flexCheckChecked"> Aceito os termos e condições </label> </div> <button class="btn btn-primary mt-4 signup">Seja um membro</button>
+                  </form>
+                  <div class="text-center mt-3"> <span>Visite as  nossas redes sociais</span> </div>
+                  <div class="d-flex justify-content-center mt-4"> <span class="social"><i class="fa fa-google"></i></span> <span class="social"><i class="fa fa-facebook"></i></span> <span class="social"><i class="fa fa-twitter"></i></span> <span class="social"><i class="fa fa-linkedin"></i></span> </div>
+                  <div class="text-center mt-4"> <span> já tem conta? </span> <a href="/login" class="text-decoration-none">Login</a> </div>
+              </div>
+          </div>
       </div>
-    </form>
+   </div>
   </main>
-
   <div class="footerBox">
     <%- include("../partials/footer") %>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
-
 </html>
