--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -9,32 +9,32 @@
   <%- include('../partials/header')%>
   <!--header-end-->
 
-
+  <span><%= typeof error !== "undefined" ? error:'' %></span>
   <main class="ctn-login-page-box">
+    <div class="container mt-5 mb-5">
+      <div class="row d-flex align-items-center justify-content-center">
+          <div class="col-md-6">
+              <div class="card px-5 py-5"> <span class="circle"><i class="fa fa-check"></i></span>
+                  <h5 class="mt-3">Entr no mundo dos Devs <br> As melhores marcas com os melhores preços</h5> <small class="mt-2 text-muted">Aproveito o melhor da web: HTML, CSS and javascript. Todos os nossos produtos contem com garantia de qualidade e satisfação</small>
 
-    <span><%= typeof error !== "undefined" ? error:'' %></span>
+                  <form action="/auth/login" method="POST" class="mb-3">
+                    
+                    <div class="form-input"> <i class="fa fa-envelope"></i> <input type="text" name="email" class="form-control" placeholder="Informo o seu E-mail" required>
+                    </div>
+                    <div class="form-input"> <i class="fa fa-lock"></i> <input type="text" name="password" class="form-control" placeholder="Crie uma Senha" required> </div>
+                    
+                    <button class="btn btn-primary mt-4 signup">Entrar</button>
+                  </form>
+                  
 
-    <form class="row gy-4 gx-6 align-items-center" action="/auth/login" method="POST" id="form_login">
-      <label class="login-input-label">
-        <input class="form-control" type="email" name="email" placeholder="Digite seu email" />
-      </label>
-
-      <label class="login-input-label">
-        <input class="form-control" type="password" name="password" placeholder="Senha" />
-      </label>
-      <label>
-        <button class="login-submit-btn" type="submit">Entrar</button>
-      </label>
-      <div class="forget-password">
-        <p class="login-info">
-          Esqueceu a senha? <a><strong>Clique aqui</strong></a>
-        </p>
-        <p class="login-info">
-          Não tem uma conta? <a href="/auth/cadastro"><strong>Cadastre-se</strong></a>
-        </p>
+                  <div class="text-center mt-3"> <span>Visite as  nossas redes sociais</span> </div>
+                  <div class="d-flex justify-content-center mt-4"> <span class="social"><i class="fa fa-google"></i></span> <span class="social"><i class="fa fa-facebook"></i></span> <span class="social"><i class="fa fa-twitter"></i></span> <span class="social"><i class="fa fa-linkedin"></i></span> </div>
+                  <div class="text-center mt-4"> <span>esqueceu a senha? </span> <a href="#" class="text-decoration-none">Solicite uma nova</a> </div>
+                  
+              </div>
+          </div>
       </div>
-    </form>
-
+   </div>
   </main>
 
   <div class="footerBox">
