[Update]formulários Funcionando

--- a/src/public/css/contact.css
+++ b/src/public/css/contact.css
@@ -12,6 +12,9 @@ body {
     width: 100%;
     height: 100%;
   }
+  .form-horizontal {
+    margin-bottom: 2vh;
+  }
   
   .section-header {
     text-align: center;
@@ -36,7 +39,6 @@ body {
   .form-horizontal {
     /*float: left;*/
     max-width: 400px;
-    font-family: 'Lato';
     font-weight: 400;
   }
   
@@ -50,7 +52,7 @@ body {
   
   .send-button {
     margin-top: 15px;
-    height: 25px;
+    height: 30px;
     width: 400px;
     overflow: hidden;
     transition: all .2s ease-in-out;
@@ -61,14 +63,14 @@ body {
     height: 34px;
     transition: all .2s ease-in-out;
   }
-  
+
   .send-text {
     display: block;
     margin-top: 10px;
-    /* font: 700 12px 'Lato', sans-serif; */
+    font: 700 12px ;
     letter-spacing: 2px;
   }
-  
+
   .alt-send-button:hover {
     transform: translate3d(0px, -29px, 0px);
   }
@@ -181,13 +183,7 @@ body {
     color: var(--primary-color);
   }
   
-  .copyright {
-    font: 200 14px 'Oswald', sans-serif;
-    color: #555;
-    letter-spacing: 1px;
-    text-align: center;
-  }
-  
+
   hr {
     border-color: rgba(255,255,255,.6);
   }
