--- a/src/views/auth/cadastro.ejs
+++ b/src/views/auth/cadastro.ejs
@@ -23,14 +23,21 @@
                   <h5 class="mt-3">Entr no mundo dos Devs <br> As melhores marcas com os melhores preços</h5> <small class="mt-2 text-muted">Aproveito o melhor da web: HTML, CSS and javascript. Todos os nossos produtos contem com garantia de qualidade e satisfação</small>
 
                   <form action="/auth/cadastro" method="POST" class="mb-3">
+
                     <div class="form-input"> <i class="fa fa-user"></i> <input type="text" name="name" class="form-control" placeholder="Digite o seu nome" required> </div>
+
                     <div class="form-input"> <i class="fa fa-envelope"></i> <input type="text" name="email" class="form-control" placeholder="Informo o seu E-mail" required> </div>
+
                     <div class="form-input"> <i class="fa fa-lock"></i> <input type="text" name="password" class="form-control" placeholder="Crie uma Senha" required> </div>
-                    <div class="form-check"> <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked> <label class="form-check-label" for="flexCheckChecked"> Aceito os termos e condições </label> </div> <button class="btn btn-primary mt-4 signup">Seja um membro</button>
+
+                    <div class="form-check"> <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked> <label class="form-check-label" for="flexCheckChecked"> Aceito os termos e condições </label> </div>
+                    
+                    <button id="signup-button"class="btn btn-primary mt-4 signup">Seja um membro</button>
                   </form>
-                  <div class="text-center mt-3"> <span>Visite as  nossas redes sociais</span> </div>
-                  <div class="d-flex justify-content-center mt-4"> <span class="social"><i class="fa fa-google"></i></span> <span class="social"><i class="fa fa-facebook"></i></span> <span class="social"><i class="fa fa-twitter"></i></span> <span class="social"><i class="fa fa-linkedin"></i></span> </div>
-                  <div class="text-center mt-4"> <span> já tem conta? </span> <a href="/login" class="text-decoration-none">Login</a> </div>
+                  
+                  <div class="text-center fs-3"> <span>Visite as  nossas redes sociais</span> </div>
+                  <div class="d-flex justify-content-center mt-4" id="login-social-icons"> <span class="social"><i class="fa fa-google"></i></span> <span class="social"><i class="fa fa-facebook"></i></span> <span class="social"><i class="fa fa-twitter"></i></span> <span class="social"><i class="fa fa-linkedin"></i></span> </div>
+                  <div class="text-center fs-3"> <span> já tem conta? </span> <a href="/login/" class="text-decoration-none">Faça o Login</a> </div>
               </div>
           </div>
       </div>
