--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -14,8 +14,9 @@
     <div class="container mt-5 mb-5">
       <div class="row d-flex align-items-center justify-content-center">
           <div class="col-md-6">
-              <div class="card px-5 py-5"> <span class="circle"><i class="fa fa-check"></i></span>
-                  <h5 class="mt-3">Entr no mundo dos Devs <br> As melhores marcas com os melhores preços</h5> <small class="mt-2 text-muted">Aproveito o melhor da web: HTML, CSS and javascript. Todos os nossos produtos contem com garantia de qualidade e satisfação</small>
+              <div class="card px-5 py-5 "> 
+                  <h5 class="fs-3">Entre no mundo dos Devs <br> As melhores marcas com os melhores preços</h5> 
+                  <!-- <small class="mt-2 text-muted">Aproveito o melhor da web: HTML, CSS and javascript. Todos os nossos produtos contem com garantia de qualidade e satisfação</small> -->
 
                   <form action="/auth/login" method="POST" class="mb-3">
                     
@@ -23,13 +24,13 @@
                     </div>
                     <div class="form-input"> <i class="fa fa-lock"></i> <input type="text" name="password" class="form-control" placeholder="Crie uma Senha" required> </div>
                     
-                    <button class="btn btn-primary mt-4 signup">Entrar</button>
+                    <button id="login-button" class="btn btn-primary mt-4 signup">Entrar</button>
                   </form>
                   
 
-                  <div class="text-center mt-3"> <span>Visite as  nossas redes sociais</span> </div>
-                  <div class="d-flex justify-content-center mt-4"> <span class="social"><i class="fa fa-google"></i></span> <span class="social"><i class="fa fa-facebook"></i></span> <span class="social"><i class="fa fa-twitter"></i></span> <span class="social"><i class="fa fa-linkedin"></i></span> </div>
-                  <div class="text-center mt-4"> <span>esqueceu a senha? </span> <a href="#" class="text-decoration-none">Solicite uma nova</a> </div>
+                  <div class="text-center fs-3"> <span>Visite as  nossas redes sociais</span> </div>
+                  <div class="d-flex justify-content-center mt-4" id="login-social-icons"> <span class="social"><i class="fa fa-google"></i></span> <span class="social"><i class="fa fa-facebook"></i></span> <span class="social"><i class="fa fa-twitter"></i></span> <span class="social"><i class="fa fa-linkedin"></i></span> </div>
+                  <div class="text-center fs-3"> <span>Ainda não tem conta? </span> <a href="cadastro/" class="text-decoration-none"> clique aqui para criar uma</a> </div>
                   
               </div>
           </div>
