--- a/src/views/partials/user-box-client.ejs
+++ b/src/views/partials/user-box-client.ejs
@@ -9,9 +9,11 @@
       <p>address@hotmail.com</p>
     </div>
     <div class="user-profile-buttons">
-
       <label>
-        <button class="profile-btn" type="submit">Cadastro Produtos</button>
+        <button class="profile-btn" type="submit">Meus pedidos</button>
+      </label>
+      <label>
+        <button class="profile-btn" type="submit">Avaliações</button>
       </label>
       <label>
         <form action="/auth/logout">
