--- a/src/views/auth/cadastro.ejs
+++ b/src/views/auth/cadastro.ejs
@@ -19,8 +19,8 @@
     <div class="container mt-5 mb-5">
       <div class="row d-flex align-items-center justify-content-center">
           <div class="col-md-6">
-              <div class="card px-5 py-5"> <span class="circle"><i class="fa fa-check"></i></span>
-                  <h5 class="mt-3">Entr no mundo dos Devs <br> As melhores marcas com os melhores preços</h5> <small class="mt-2 text-muted">Aproveito o melhor da web: HTML, CSS and javascript. Todos os nossos produtos contem com garantia de qualidade e satisfação</small>
+              <div class="card px-5 py-5"> 
+                  <h5 class="mt-3 fs-3">Entra no mundo dos Devs <br> As melhores marcas com os melhores preços</h5> <small class="mt-2 text-muted fs-4">Aproveite o melhor da web: HTML, CSS and javascript.</small>
 
                   <form action="/auth/cadastro" method="POST" class="mb-3">
 
