[Update]Multer ok

--- a/src/views/admin/cliente.ejs
+++ b/src/views/admin/cliente.ejs
@@ -12,7 +12,7 @@
 
   <div class="user-panel">
     <!-- panel-user -->
-    <%- include("../partials/user-box-client") %>
+    <%- include("../partials/client-box") %>
     <!--panel-user-end-->
   </div>
 
