--- a/src/views/admin/painel.ejs
+++ b/src/views/admin/painel.ejs
@@ -12,7 +12,7 @@
 
   <div class="user-panel">
     <!-- panel-user -->
-    <%- include("../partials/user-box") %>
+    <%- include("../partials/admin-box") %>
     <!--panel-user-end-->
   </div>
 
