--- a/src/views/partials/admin-box.ejs
+++ b/src/views/partials/admin-box.ejs
@@ -11,7 +11,9 @@
     <div class="user-profile-buttons">
 
       <label>
+        <a href="/produtos/criar-produto">
         <button class="profile-btn" type="submit">Cadastro Produtos</button>
+      </a>
       </label>
       <label>
         <form action="/auth/logout">
