--- a/src/views/partials/client-box.ejs
+++ b/src/views/partials/client-box.ejs
@@ -5,7 +5,7 @@
     </div>
 
     <div class="user-info">
-      <h2>Jeffrey Tech</h2>
+      <h2>Jeffrey Client</h2>
       <p>address@hotmail.com</p>
     </div>
     <div class="user-profile-buttons">
