--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -23,6 +23,7 @@
 
   <div class="ctn-offer">
     <%- include("./partials/offers") %>
+    <%- include("./partials/cards") %>
   </div>
   <!--offerEnd-->
   <!--footer-->
