[UPDATE]home db connection

--- a/src/views/partials/cards.ejs
+++ b/src/views/partials/cards.ejs
@@ -1,10 +1,10 @@
 <div class="conteiner-cards">
-    <% product.forEach(product => {%> 
+    <% product.forEach(products => {%> 
         <div class="cards">
-            <img src="/uploads/<%=product.image%>" class="product-image" alt="<%= products.name %>">
+            <img src="/uploads/<%=products.image%>" class="product-image" alt="<%= products.name %>">
             <div class="card-details">
                 <h2 class="cardName"><%= products.name%></h2>
-                <h5 class="cardDiscount"><%= products.offer_price %></h5>
+                <h5 class="cardDiscount"><%= products.description %></h5>
                 <h3 class="cardPrice">R$ <%= products.unit_price %></h3>
                 <button class="cardBuy">Comprar</button>
             </div>
